✨ MELHORA ABA: Tamanho Large + Hover Chevron

--- a/index.html
+++ b/index.html
@@ -1213,16 +1213,15 @@
         .back-to-top {
             background: #ffe600;
             border: none;
-            width: 140px;
-            height: 50px;
+            width: 150px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
             position: relative;
             margin-bottom: -1px;
-            border-radius: 70px 70px 25px 25px;
-            clip-path: ellipse(70px 40px at 50% 60%);
+            clip-path: polygon(100% 39.8px, 99% 39.8303px, 98% 39.8228px, 97% 39.7595px, 96% 39.6324px, 95% 39.4408px, 94% 39.1887px, 93% 38.8831px, 92% 38.5324px, 91% 38.1449px, 90% 37.7277px, 89% 37.2858px, 88% 36.8215px, 87% 36.3342px, 86% 35.8201px, 85% 35.2724px, 84% 34.6822px, 83% 34.0386px, 82% 33.3298px, 81% 32.5442px, 80% 31.6709px, 79% 30.701px, 78% 29.6282px, 77% 28.4493px, 76% 27.1652px, 75% 25.7805px, 74% 24.304px, 73% 22.7482px, 72% 21.1292px, 71% 19.4656px, 70% 17.7785px, 69% 16.0897px, 68% 14.4217px, 67% 12.7964px, 66% 11.2342px, 65% 9.75326px, 64% 8.36904px, 63% 7.09371px, 62% 5.93588px, 61% 4.9005px, 60% 3.98898px, 59% 3.19947px, 58% 2.52727px, 57% 1.96542px, 56% 1.50539px, 55% 1.13778px, 54% 0.853034px, 53% 0.642229px, 52% 0.497658px, 51% 0.413403px, 50% 0.385742px, 49% 0.413403px, 48% 0.497658px, 47% 0.642229px, 46% 0.853034px, 45% 1.13778px, 44% 1.50539px, 43% 1.96542px, 42% 2.52727px, 41% 3.19947px, 40% 3.98898px, 39% 4.9005px, 38% 5.93588px, 37% 7.09371px, 36% 8.36904px, 35% 9.75326px, 34% 11.2342px, 33% 12.7964px, 32% 14.4217px, 31% 16.0897px, 30% 17.7785px, 29% 19.4656px, 28% 21.1292px, 27% 22.7482px, 26% 24.304px, 25% 25.7805px, 24% 27.1652px, 23% 28.4493px, 22% 29.6282px, 21% 30.701px, 20% 31.6709px, 19% 32.5442px, 18% 33.3298px, 17% 34.0386px, 16% 34.6822px, 15% 35.2724px, 14% 35.8201px, 13% 36.3342px, 12% 36.8215px, 11% 37.2858px, 10% 37.7277px, 9% 38.1449px, 8% 38.5324px, 7% 38.8831px, 6% 39.1887px, 5% 39.4408px, 4% 39.6324px, 3% 39.7595px, 2% 39.8228px, 1% 39.8303px, 0% 39.8px, 0% 100%, 1% 100%, 2% 100%, 3% 100%, 4% 100%, 5% 100%, 6% 100%, 7% 100%, 8% 100%, 9% 100%, 10% 100%, 11% 100%, 12% 100%, 13% 100%, 14% 100%, 15% 100%, 16% 100%, 17% 100%, 18% 100%, 19% 100%, 20% 100%, 21% 100%, 22% 100%, 23% 100%, 24% 100%, 25% 100%, 26% 100%, 27% 100%, 28% 100%, 29% 100%, 30% 100%, 31% 100%, 32% 100%, 33% 100%, 34% 100%, 35% 100%, 36% 100%, 37% 100%, 38% 100%, 39% 100%, 40% 100%, 41% 100%, 42% 100%, 43% 100%, 44% 100%, 45% 100%, 46% 100%, 47% 100%, 48% 100%, 49% 100%, 50% 100%, 51% 100%, 52% 100%, 53% 100%, 54% 100%, 55% 100%, 56% 100%, 57% 100%, 58% 100%, 59% 100%, 60% 100%, 61% 100%, 62% 100%, 63% 100%, 64% 100%, 65% 100%, 66% 100%, 67% 100%, 68% 100%, 69% 100%, 70% 100%, 71% 100%, 72% 100%, 73% 100%, 74% 100%, 75% 100%, 76% 100%, 77% 100%, 78% 100%, 79% 100%, 80% 100%, 81% 100%, 82% 100%, 83% 100%, 84% 100%, 85% 100%, 86% 100%, 87% 100%, 88% 100%, 89% 100%, 90% 100%, 91% 100%, 92% 100%, 93% 100%, 94% 100%, 95% 100%, 96% 100%, 97% 100%, 98% 100%, 99% 100%, 100% 100%);
         }
 
 
@@ -1230,6 +1229,12 @@
         .back-to-top-icon {
             width: 24px;
             height: 24px;
+            fill: #333;
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .back-to-top:hover .back-to-top-icon {
+            transform: translateY(-2px);
         }
 
         .visually-hidden {
@@ -1418,14 +1423,18 @@
             }
 
             .back-to-top {
-                width: 100px;
-                height: 38px;
-                clip-path: ellipse(50px 30px at 50% 60%);
+                width: 112px;
+                height: 30px;
+                clip-path: polygon(100% 29.85px, 99% 29.8727px, 98% 29.8671px, 97% 29.8196px, 96% 29.7243px, 95% 29.5806px, 94% 29.3915px, 93% 29.1623px, 92% 28.8993px, 91% 28.6087px, 90% 28.2958px, 89% 27.9643px, 88% 27.6162px, 87% 27.2507px, 86% 26.8651px, 85% 26.4543px, 84% 26.0117px, 83% 25.5289px, 82% 24.9974px, 81% 24.4082px, 80% 23.7532px, 79% 23.0258px, 78% 22.2211px, 77% 21.337px, 76% 20.3739px, 75% 19.3354px, 74% 18.228px, 73% 17.0612px, 72% 15.8469px, 71% 14.5992px, 70% 13.3338px, 69% 12.0673px, 68% 10.8163px, 67% 9.59733px, 66% 8.42565px, 65% 7.31494px, 64% 6.27678px, 63% 5.32028px, 62% 4.45191px, 61% 3.67537px, 60% 2.99174px, 59% 2.3996px, 58% 1.89545px, 57% 1.47407px, 56% 1.12905px, 55% 0.853332px, 54% 0.639775px, 53% 0.481672px, 52% 0.373244px, 51% 0.310053px, 50% 0.289306px, 49% 0.310053px, 48% 0.373244px, 47% 0.481672px, 46% 0.639775px, 45% 0.853332px, 44% 1.12905px, 43% 1.47407px, 42% 1.89545px, 41% 2.3996px, 40% 2.99174px, 39% 3.67537px, 38% 4.45191px, 37% 5.32028px, 36% 6.27678px, 35% 7.31494px, 34% 8.42565px, 33% 9.59733px, 32% 10.8163px, 31% 12.0673px, 30% 13.3338px, 29% 14.5992px, 28% 15.8469px, 27% 17.0612px, 26% 18.228px, 25% 19.3354px, 24% 20.3739px, 23% 21.337px, 22% 22.2211px, 21% 23.0258px, 20% 23.7532px, 19% 24.4082px, 18% 24.9974px, 17% 25.5289px, 16% 26.0117px, 15% 26.4543px, 14% 26.8651px, 13% 27.2507px, 12% 27.6162px, 11% 27.9643px, 10% 28.2958px, 9% 28.6087px, 8% 28.8993px, 7% 29.1623px, 6% 29.3915px, 5% 29.5806px, 4% 29.7243px, 3% 29.8196px, 2% 29.8671px, 1% 29.8727px, 0% 29.85px, 0% 100%, 1% 100%, 2% 100%, 3% 100%, 4% 100%, 5% 100%, 6% 100%, 7% 100%, 8% 100%, 9% 100%, 10% 100%, 11% 100%, 12% 100%, 13% 100%, 14% 100%, 15% 100%, 16% 100%, 17% 100%, 18% 100%, 19% 100%, 20% 100%, 21% 100%, 22% 100%, 23% 100%, 24% 100%, 25% 100%, 26% 100%, 27% 100%, 28% 100%, 29% 100%, 30% 100%, 31% 100%, 32% 100%, 33% 100%, 34% 100%, 35% 100%, 36% 100%, 37% 100%, 38% 100%, 39% 100%, 40% 100%, 41% 100%, 42% 100%, 43% 100%, 44% 100%, 45% 100%, 46% 100%, 47% 100%, 48% 100%, 49% 100%, 50% 100%, 51% 100%, 52% 100%, 53% 100%, 54% 100%, 55% 100%, 56% 100%, 57% 100%, 58% 100%, 59% 100%, 60% 100%, 61% 100%, 62% 100%, 63% 100%, 64% 100%, 65% 100%, 66% 100%, 67% 100%, 68% 100%, 69% 100%, 70% 100%, 71% 100%, 72% 100%, 73% 100%, 74% 100%, 75% 100%, 76% 100%, 77% 100%, 78% 100%, 79% 100%, 80% 100%, 81% 100%, 82% 100%, 83% 100%, 84% 100%, 85% 100%, 86% 100%, 87% 100%, 88% 100%, 89% 100%, 90% 100%, 91% 100%, 92% 100%, 93% 100%, 94% 100%, 95% 100%, 96% 100%, 97% 100%, 98% 100%, 99% 100%, 100% 100%);
             }
 
             .back-to-top-icon {
                 width: 20px;
                 height: 20px;
+            }
+
+            .back-to-top:hover .back-to-top-icon {
+                transform: translateY(-1px);
             }
 
             .cta-content {
