--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             height: 517px;
             border-radius: 40px;
             overflow: hidden;
-            background-image: url('./assets/images/hero.png');
+            background-image: url('./assets/images/hero_v2.png');
             background-size: cover;
             background-position: center;
         }
@@ -387,7 +387,7 @@
 
         .product-card.dinero-express {
             background: linear-gradient(135deg, #ff6b6b, #ee5a24);
-            background-image: url('./assets/images/dinero-express.png');
+            background-image: url('./assets/images/DE_v2.png');
             background-size: cover;
             background-position: center;
         }
@@ -398,18 +398,18 @@
 
         .product-card.cuotas-fijas {
             background: linear-gradient(135deg, #74b9ff, #0984e3);
-            background-image: url('./assets/images/cuotas fijas.png');
+            background-image: url('./assets/images/CF_v2.png');
             background-size: cover;
             background-position: center;
         }
 
         .product-card.cuotas-fijas .card-content {
-            color: rgba(0,0,0,0.9);
+            color: white;
         }
 
         .product-card.adelanto-dinero {
             background: linear-gradient(135deg, #a29bfe, #6c5ce7);
-            background-image: url('./assets/images/adelantos.png');
+            background-image: url('./assets/images/adelanto_v2.png');
             background-size: cover;
             background-position: center;
         }
@@ -420,13 +420,13 @@
 
         .product-card.porcentaje-ventas {
             background: linear-gradient(135deg, #ffeaa7, #fdcb6e);
-            background-image: url('./assets/images/ppv.png');
+            background-image: url('./assets/images/PPV_v2.png');
             background-size: cover;
             background-position: center;
         }
 
         .product-card.porcentaje-ventas .card-content {
-            color: rgba(0,0,0,0.9);
+            color: white;
         }
 
         /* Steps Section */
