📐 AJUSTA LINE-HEIGHT HERO: 90px → 84px
✨ Entrelinha mais compacta e elegante no título principal

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         .hero-title {
             font-size: 80px;
             font-weight: 700;
-            line-height: 90px; /* Aumentado de 80px para 90px (+10px) */
+            line-height: 84px; /* Ajustado para 84px - entrelinha mais compacta */
             letter-spacing: -3.2px;
             margin-bottom: 16px;
             color: rgba(0,0,0,0.9);
