🧪 CRIA 3 VERSÕES HERO PARA TESTES
✨ Setup para experimentação:
- 🎯 Versão Original (intacta como referência)
- 🧪 Teste 1 (para primeira variação)
- 🔬 Teste 2 (para segunda variação)
- 📝 Labels com kerning melhorado (letter-spacing: 2px)

🎯 Objetivo: Testar animações sem perder versão original

--- a/index.html
+++ b/index.html
@@ -1474,12 +1474,13 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Section ORIGINAL -->
     <section class="hero">
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
+                        <span style="color: #666; font-size: 14px; display: block; margin-bottom: 10px; letter-spacing: 2px; font-weight: 600;">🎯 VERSÃO ORIGINAL</span>
                         Creditos para impulsar tu 
                         <div class="animated-word-container">
                             <div class="animated-words">
@@ -1493,6 +1494,60 @@
                     </h1>
                     <p class="hero-subtitle">Simula tu crédito y obtén el dinero al instante.</p>
                     <a href="#productos" class="hero-cta">Simular crédito</a>
+                </div>
+                <div class="hero-image">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Hero Section TESTE 1 -->
+    <section class="hero" style="margin-top: 40px;">
+        <div class="container">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1 class="hero-title">
+                        <span style="color: #666; font-size: 14px; display: block; margin-bottom: 10px; letter-spacing: 2px; font-weight: 600;">🧪 TESTE 1</span>
+                        Creditos para impulsar tu 
+                        <div class="animated-word-container">
+                            <div class="animated-words">
+                                <div class="word-item">negócio</div>
+                                <div class="word-item">tienda</div>
+                                <div class="word-item">lojinha</div>
+                                <div class="word-item">mercado</div>
+                                <div class="word-item">negócio</div>
+                            </div>
+                        </div>
+                    </h1>
+                    <p class="hero-subtitle">Simula tu crédito y obtén el dinero al instante.</p>
+                    <a href="#productos" class="hero-cta">Simular crédito</a>
+                </div>
+                <div class="hero-image">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Hero Section TESTE 2 -->
+    <section class="hero" style="margin-top: 40px;">
+        <div class="container">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1 class="hero-title">
+                        <span style="color: #666; font-size: 14px; display: block; margin-bottom: 10px; letter-spacing: 2px; font-weight: 600;">🔬 TESTE 2</span>
+                        Creditos para impulsar tu 
+                        <div class="animated-word-container">
+                            <div class="animated-words">
+                                <div class="word-item">negócio</div>
+                                <div class="word-item">tienda</div>
+                                <div class="word-item">lojinha</div>
+                                <div class="word-item">mercado</div>
+                                <div class="word-item">negócio</div>
+                            </div>
+                        </div>
+                    </h1>
+                    <p class="hero-subtitle">Simula tu crédito y obtén el dinero al instante.</p>
+                    <a href="#produtos" class="hero-cta">Simular crédito</a>
                 </div>
                 <div class="hero-image">
                 </div>
