🔬 TESTE 2: Adiciona transições Material Design
✨ Nova propriedade no Teste 2:
- transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1)

🎯 Resultado: Animação híbrida
- Animation: controla ciclo das palavras (keyframes)
- Transition: suaviza mudanças em tempo real
- Easing Material Design para máxima suavidade

📊 Status dos testes:
- 🎯 Original: referência intacta
- 🧪 Teste 1: cubic-bezier suavizado
- 🔬 Teste 2: animation + transition híbrida

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             animation: wordSlide 10s infinite;
             animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Original - você pode modificar aqui */
             transform: translateY(0);
+            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .word-item {
