--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
         }
 
         .animated-words {
-            animation: wordSlide 10s infinite;
+            animation: wordSlide 14s infinite;
             animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Smooth easing */
             transform: translateY(0);
+            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         /* TESTE 1 - Animação específica */
@@ -1495,7 +1496,6 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        <span style="color: #666; font-size: 14px; display: block; margin-bottom: 10px; letter-spacing: 2px; font-weight: 600;">🎯 VERSÃO ORIGINAL</span>
                         Creditos para impulsar tu 
                         <div class="animated-word-container">
                             <div class="animated-words">
@@ -1517,7 +1517,7 @@
     </section>
 
     <!-- Hero Section TESTE 1 -->
-    <section class="hero" style="margin-top: 40px;">
+    <section class="hero" style="margin-top: 40px; display: none;">
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
@@ -1544,7 +1544,7 @@
     </section>
 
     <!-- Hero Section TESTE 2 -->
-    <section class="hero" style="margin-top: 40px;">
+    <section class="hero" style="margin-top: 40px; display: none;">
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
