Ajusta largura animated-word-container para 300px

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         /* Animated Words Container */
         .animated-word-container {
             display: inline-block;
+            width: 300px; /* Largura fixa de 300px */
             height: 100px; /* Voltando para 100px - altura ideal para acomodar descenders */
             overflow: hidden;
             position: relative;
