Remove números dos steps - deixa apenas texto limpo

--- a/index.html
+++ b/index.html
@@ -1638,10 +1638,10 @@
                     </div>
                     <div class="step-title-container">
                         <div class="step-title-animated">
-                            <div class="step-title-item">1. Ingresa un monto</div>
-                            <div class="step-title-item">2. Elige tu plazo</div>
-                            <div class="step-title-item">3. Recibe tu dinero</div>
-                            <div class="step-title-item">1. Ingresa un monto</div>
+                            <div class="step-title-item">Ingresa un monto</div>
+                            <div class="step-title-item">Elige tu plazo</div>
+                            <div class="step-title-item">Recibe tu dinero</div>
+                            <div class="step-title-item">Ingresa un monto</div>
                 </div>
                             </div>
                         </div>
