Atualiza imagens dos cards de requisitos para novas versões

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 
         .requirement-card.card1 {
             background: linear-gradient(135deg, #3483fa, #2968c8);
-            background-image: url('./assets/images/requisito_1.png');
+            background-image: url('./assets/images/Requisitos 1.png');
             background-size: cover;
             background-position: center;
         }
@@ -831,7 +831,7 @@
 
         .requirement-card.card2 {
             background: linear-gradient(135deg, #00a650, #00832d);
-            background-image: url('./assets/images/requisito_2.png');
+            background-image: url('./assets/images/Requisitos 2.png');
             background-size: cover;
             background-position: center;
         }
