--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         }
 
         .requirement-card.dark h3 {
-            color: rgba(0,0,0,0.9);
+            color: white;
         }
 
         .requirement-card.card1 {
