--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
         .product-card.cuotas-fijas {
             background: linear-gradient(135deg, #74b9ff, #0984e3);
-            background-image: url('./assets/images/CF_v2.png');
+            background-image: url('./assets/images/CF_Desk_MLB.png');
             background-size: cover;
             background-position: center;
         }
