Revert "feat: alterar header para fundo vermelho"
This reverts commit c48f59286514ba5c0a5553d98a72ce5500c8fc0b.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         /* Header */
         .header {
-            background: #dc2626;
+            background: #ffe600;
             padding: 20px 0;
             position: fixed;
             width: 100%;
@@ -40,7 +40,7 @@
 
         .header.scrolled {
             padding: 12px 0;
-            background: rgba(220, 38, 38, 0.95);
+            background: rgba(255, 230, 0, 0.95);
             backdrop-filter: blur(10px);
         }
 
@@ -78,7 +78,7 @@
             padding: 8px 16px;
             border-radius: 5px;
             text-decoration: none;
-            color: rgba(255,255,255,0.9);
+            color: rgba(0,0,0,0.9);
             font-weight: 600;
             font-size: 14px;
             display: flex;
@@ -88,7 +88,7 @@
         }
 
         .nav-item:hover {
-            background-color: rgba(255,255,255,0.1);
+            background-color: rgba(0,0,0,0.05);
         }
 
         .nav-item.dropdown {
@@ -101,7 +101,7 @@
             width: 20px;
             height: 20px;
             opacity: 1;
-            filter: brightness(0) invert(1); /* Força cor branca */
+            filter: brightness(0); /* Força cor preta */
         }
 
         /* Header scrolled state */
@@ -122,17 +122,17 @@
         }
 
         .nav-item.login {
-            background: rgba(255, 255, 255, 0.15);
-            color: white;
+            background: rgba(52, 131, 250, 0.15);
+            color: #3483fa;
         }
 
         .nav-item.signup {
-            background: white;
-            color: #dc2626;
+            background: #3483fa;
+            color: white;
         }
 
         .nav-item.signup:hover {
-            background: rgba(255, 255, 255, 0.9);
+            background: #2968c8;
         }
 
         /* Hero Section */
