Corrige acentuação: 'negocio' sem acento (espanhol correto)

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         }
 
         @keyframes wordSlide {
-            0% { transform: translateY(0); } /* Inicia estático - negócio primeira vez */
+            0% { transform: translateY(0); } /* Inicia estático - negocio primeira vez */
             18% { transform: translateY(0); } /* MAIS tempo parado */
             20% { transform: translateY(-118px); } /* Transição para "tienda" */
             21% { transform: translateY(-122px); } /* Micro ajuste */
@@ -247,10 +247,10 @@
             61% { transform: translateY(-362px); } /* Micro ajuste */
             62% { transform: translateY(-360px); } /* Posição final */
             78% { transform: translateY(-360px); } /* Tempo para exibir palavra */
-            80% { transform: translateY(-478px); } /* Transição para "negócio" no giro */
+            80% { transform: translateY(-478px); } /* Transição para "negocio" no giro */
             81% { transform: translateY(-482px); } /* Micro ajuste - settling no giro */
             82% { transform: translateY(-480px); } /* Posição final COM settling */
-            83.5% { transform: translateY(-480px); } /* MÍNIMO tempo para segunda palavra negócio */
+            83.5% { transform: translateY(-480px); } /* MÍNIMO tempo para segunda palavra negocio */
             100% { transform: translateY(-480px); } /* Mantém posição no final */
         }
 
@@ -1589,7 +1589,7 @@
                             <img src="./assets/images/Chevron Down.svg" alt="" class="chevron">
                         </a>
                         <a href="#" class="nav-item dropdown">
-                            Conta negócio
+                            Conta negocio
                             <img src="./assets/images/Chevron Down.svg" alt="" class="chevron">
                         </a>
                     </nav>
@@ -1614,11 +1614,11 @@
                         Créditos para impulsar tu 
                         <div class="animated-word-container">
                             <div class="animated-words">
-                                <div class="word-item">negócio</div>
+                                <div class="word-item">negocio</div>
                                 <div class="word-item">tienda</div>
                                 <div class="word-item">lojinha</div>
                                 <div class="word-item">mercado</div>
-                                <div class="word-item">negócio</div>
+                                <div class="word-item">negocio</div>
                             </div>
                         </div>
                     </h1>
@@ -1669,11 +1669,11 @@
                         Créditos para impulsar tu 
                         <div class="animated-word-container">
                             <div class="test1-animated-words">
-                                <div class="word-item">negócio</div>
+                                <div class="word-item">negocio</div>
                                 <div class="word-item">tienda</div>
                                 <div class="word-item">lojinha</div>
                                 <div class="word-item">mercado</div>
-                                <div class="word-item">negócio</div>
+                                <div class="word-item">negocio</div>
                             </div>
                         </div>
                     </h1>
